Fixed mobile nav spacing

--- a/src/Components/Nav.css
+++ b/src/Components/Nav.css
@@ -70,7 +70,7 @@
         margin: 0;
         font-size: 20px;
         /*COVID19 Banner space */
-        margin-top: 32px;
+        margin-top: 38px;
     }
     .nav:not(.alwaysOpen) {
         border: 1px solid #cec5c5;
